Opened 15 years ago

Closed 15 years ago

#777 closed defect (fixed)

zzufed .smk file crashes ffmpeg_g(memory exceeded)

Reported by: Diana Muscalu Owned by:
Priority: important Component: avformat
Version: git-master Keywords: smacker
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

use zzuf -c -s10 -r0.001 ffmpeg_g -i wetlogo.smk -f null - to reproduce the memory exceeded

Attachments (2)

corruptfile (707.1 KB ) - added by Diana Muscalu 15 years ago.
use this file in ffmpeg to reproduce the crash (-i corruptfile -f null - )
wetlogo.smk (707.1 KB ) - added by Diana Muscalu 15 years ago.
zzuf this with -c -s10 -r0.001:1 to reproduce the crash

Download all attachments as: .zip

Change History (3)

by Diana Muscalu, 15 years ago

Attachment: corruptfile added

use this file in ffmpeg to reproduce the crash (-i corruptfile -f null - )

by Diana Muscalu, 15 years ago

Attachment: wetlogo.smk added

zzuf this with -c -s10 -r0.001:1 to reproduce the crash

comment:1 by Michael Niedermayer, 15 years ago

Component: FFmpegavformat
Keywords: smacker added
Reproduced by developer: set
Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.