smackerdemuxer: check some values before instead of just after malloc() Fixes Ticket777 Bug Found by: Diana Elena Muscalu

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>